--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <center><img src="top-banner.jpg"></center>
     <h1>Data Dunkers Program</h1>
     Data Dunkers is an innovative basketball and data science learning experience for students in Grades 5-12. Students learn foundational data science skills through basketball statistics in a fun and inclusive environment.
-    <p><b>https://bit.ly/DataDunkers</b></p>
+    <p><b><a href="https://bit.ly/DataDunkers" target="_blank">https://bit.ly/DataDunkers</a></b></p>
     
     <h2>Resources</h2>
     <p>The program consists of learning activities designed to explore how to find meaning in data, primarily using open data from the NBA and WNBA. Students engage in data analysis by defining a question, collecting, cleaning, and analyzing data, and effectively communicating results. Beyond this, the initiative serves as a launchpad for global competencies, such as critical thinking and problem solving, and discovering career pathways within the realm of data science.</p>
