--- a/Foundations.html
+++ b/Foundations.html
@@ -21,13 +21,13 @@
         <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-3QKVVHHYMW');</script>
   </head>
   <body>
-       <center><img src="Images/data-dunkers-header-1.png" loading="lazy" width="1500" height="500" alt="Data Dunkers Header" title="" />   </center>
-         <h1>Data Dunkers Fundamentals</h1>
+       <center><img src="data-dunkers-header-1.png" loading="lazy" width="1500" height="500" alt="Data Dunkers Header" title="" />   </center>
+         <h1>Data Dunkers Foundations</h1>
     <p>This introductory format focuses on engaging students with the core concepts of data science through the lens of basketball. Utilizing both their own data and data from the NBA/WNBA, participants will learn to make performance improvement recommendations for basketball jump shots.</p>
     <h2>Key Components</h2>
     <ul>
         <li>Basic data analysis and storytelling</li>
-        <li>Learn to use Jup<img src="Images/data-dunkers-header-1.png" width="1500" height="500" alt="" border="0"><img src="data-dunkers-header-1.png" width="1500" height="500" alt="" border="0"><img src="Images/data-dunkers-header-1.png" width="1500" height="500" alt="" border="0">yter Notebook for data input processing and visualization</li>
+        <li>Learn to use Jupyter Notebook for data input processing and visualization</li>
         <li>Develop and pitch recommendations based on data analysis</li>
     </ul>
     <h2>Driving Question for Data Dunkers Fundamentals</h2>
