--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8">
     <title>Data Dunkers Overview</title>
     <link rel="stylesheet" href="style.css">
-   
+    <style>
+        body {
+            padding-left: 10%;
+            padding-right: 10%;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        table, th, td {
+            border: 1px solid;
+            border-collapse: collapse;
+            padding: 5px;
+        }
+    </style>
     <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-3QKVVHHYMW"></script>
         <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-3QKVVHHYMW');</script>
