--- a/modules.html
+++ b/modules.html
@@ -177,7 +177,7 @@ The Data Dunkers Full Court Press program, designed for a commitment of 10 to 20
   <div class="container contact-container" id="contact">
     <div class="container location">
       <h3 class="footer-section-header">Partners</h3>
-      <p class="paragraph footer-paragraph">PS43 Foundation<br>Dell Technologies<br>Callysto<br>Digital Moments</p>
+      <p class="paragraph footer-paragraph">PS43 Foundation<br>Dell Technologies<br>Callysto<br>Digital Moment</p>
     </div>
     <div class="container contac-us-footer">
       <h3 class="footer-section-header">Contact Us</h3>
