Update modules.html corrected typo

--- a/modules.html
+++ b/modules.html
@@ -19,7 +19,7 @@
 <body class="no-js">
     <div class="container menu-container">
       <a class="link-text nav-link smooth-scroll" href="index.html">Home</a>
-      <a class="link-text nav-link smooth-scroll" href="overview.html">About</a>
+      <a class="link-text nav-link smooth-scroll" href="About.html">About</a>
       <a class="link-text nav-link smooth-scroll" href="modules.html">Learning Modules</a>
     </div>
   </div>
