Add hoops notebook link

--- a/students/index.html
+++ b/students/index.html
@@ -15,6 +15,8 @@
 
 <a href="https://bit.ly/dd-mini-lab">Mini Basketball Labyrinth</a>
 <br>
+<a href="https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https://github.com/pbeens/Data-Dunkers&branch=main&subPath=Activities/lets_plot_hoop_data_5.ipynb&depth=1">Hoops Notebook</a>
+<br>
 <a href="https://bit.ly/ddbbform5">5 Shot Form</a>
 <br>
 <a href="https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https://github.com/pbeens/Data-Dunkers&branch=main&subPath=Demos&depth=1">Demos Folder</a>
