--- a/SD43/index.html
+++ b/SD43/index.html
@@ -19,9 +19,7 @@
 <br>
 <a href="https://bit.ly/ddbbform5">5 Shot Form</a>
 <br>
-<a href="https://datadunkers.ca/jupyterlite/tree/data-dunkers/Demos">Demos Folder</a>
-<br>
-<a href="https://datadunkers.ca/jupyterlite/tree/data-dunkers/Activities">Activities Folder</a>
+<a href="https://datadunkers.ca/jupyterlite/lab/index.html">Jupyterlite</a>
 <br>
 <a href="https://docs.google.com/presentation/d/1ROy07Ac2FPkIpQefMCNqUCJAG2tag-ONOAkNwfbSsos">Slides</a>
 
