--- a/SD43/index.html
+++ b/SD43/index.html
@@ -22,6 +22,26 @@
 <a href="https://datadunkers.ca/jupyterlite/lab/index.html">Jupyterlite</a>
 <br>
 <a href="https://docs.google.com/presentation/d/1ROy07Ac2FPkIpQefMCNqUCJAG2tag-ONOAkNwfbSsos">Slides</a>
+<br>
+<h2>Demos</h2>
+<ul>
+  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fdata-from-internal.ipynb">Data from Internal</a></li>
+  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fdata-from-csv.ipynb">Data from CSV</a></li>
+  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fdata-from-webpage.ipynb">Data from Webpage</a></li>
+  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fdata-from-google-sheet.ipynb">Data from Google Sheet</a></li>
+  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fdata-from-excel.ipynb">Data from Excel</a></li>
+<hr>
+<li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fcolumns.ipynb">Columns</a></li>
+<li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fnew-columns.ipynb">Making New Columns</a></li>
+<li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Ffiltering-data.ipynb">Filtering Data</a></li>
+<li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fsorting-data.ipynb">Sorting Data</a></li>
+<hr>
+<li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fbar-graphs.ipynb">Bar Charts</a></li>
+<li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fscatter-plots.ipynb">Scatter Plots</a></li>
+<li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fpie-charts.ipynb">Pie Charts</a></li>
+<li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fhistograms.ipynb">Histograms</a></li>
+
+</ul>
 
 </body>
 
