--- a/SD43/index.html
+++ b/SD43/index.html
@@ -40,6 +40,9 @@
 <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fscatter-plots.ipynb">Scatter Plots</a></li>
 <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fpie-charts.ipynb">Pie Charts</a></li>
 <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fhistograms.ipynb">Histograms</a></li>
+<hr>
+<li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fstatistics.ipynb">Statistics</a></li>
+
 
 </ul>
 
