Add JupyterLite links, reorganize

--- a/students/index.html
+++ b/students/index.html
@@ -9,21 +9,50 @@
 
 </head>
 
-<body style="font-size:3vw;  font-family: Arial, Helvetica, sans-serif">
+<body style="font-size:2.5vw;  font-family: Arial, Helvetica, sans-serif"></body>
 
 <h1>Data Dunkers Student Links</h1>
 
-<a href="https://bit.ly/dd-mini-lab">Mini Basketball Labyrinth</a>
+<h2><a href="https://hub.callysto.ca" target="_blank">Callysto Hub Links</a></h2>
+
+<a href="https://bit.ly/ddbbform5" target="_blank">5 Shot Form</a>
 <br>
-<a href="https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https://github.com/pbeens/Data-Dunkers&branch=main&subPath=Activities/lets_plot_hoop_data_5.ipynb&depth=1">Hoops Notebook</a>
+<a href="https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https://github.com/pbeens/Data-Dunkers&branch=main&subPath=Activities/lets_plot_hoop_data_5.ipynb&depth=1" target="_blank">Hoops Notebook</a>
 <br>
-<a href="https://bit.ly/ddbbform5">5 Shot Form</a>
+<a href="https://bit.ly/dd-mini-lab" target="_blank">Mini Basketball Labyrinth</a>
 <br>
-<a href="https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https://github.com/pbeens/Data-Dunkers&branch=main&subPath=Demos&depth=1">Demos Folder</a>
+<a href="https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https://github.com/pbeens/Data-Dunkers&branch=main&subPath=Demos&depth=1" target="_blank">Demos Folder</a>
 <br>
-<a href="https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https://github.com/pbeens/Data-Dunkers&branch=main&subPath=Activities&depth=1">Activities Folder</a>
+<hr>
+<h2><a href="https://datadunkers.ca/jupyterlite/lab/index.html" target="_blank">Jupyterlite Links</a></h2>
+
+<a href="https://bit.ly/ddbbform5" target="_blank">5 Shot Form</a>
 <br>
-<a href="https://bit.ly/pbl-hoops">Slides</a>
+<a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FActivities%2Flets_plot_hoop_data_5.ipynb" target="_blank">Hoops Notebook</a>
+<br>
+<a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-labyrith%2Fmini-basketball%2Fmini-basketball.ipynb" target="_blank">Mini Basketball Labyrinth</a>
+<br>
+<h3>Demonstrations</h3>
+<ul>
+  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fdata-from-internal.ipynb" target="_blank">Data from Internal</a></li>
+  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fdata-from-csv.ipynb" target="_blank">Data from CSV</a></li>
+  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fdata-from-webpage.ipynb" target="_blank">Data from Webpage</a></li>
+  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fdata-from-google-sheet.ipynb" target="_blank">Data from Google Sheet</a></li>
+  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fdata-from-excel.ipynb" target="_blank">Data from Excel</a></li>
+<hr>
+  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fbar-graphs.ipynb" target="_blank">Bar Charts</a></li>
+  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fscatter-plots.ipynb" target="_blank">Scatter Plots</a></li>
+  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fpie-charts.ipynb" target="_blank">Pie Charts</a></li>
+  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fhistograms.ipynb" target="_blank">Histograms</a></li>
+<hr>
+  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fcolumns.ipynb" target="_blank">Columns</a></li>
+  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fnew-columns.ipynb" target="_blank">Making New Columns</a></li>
+  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Ffiltering-data.ipynb" target="_blank">Filtering Data</a></li>
+  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fsorting-data.ipynb" target="_blank">Sorting Data</a></li>
+<hr>
+  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fstatistics.ipynb" target="_blank">Statistics</a></li>
+
+</ul>
 
 </body>
 
