--- a/students/index.html
+++ b/students/index.html
@@ -53,7 +53,8 @@
   <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fstatistics.ipynb" target="_blank">Statistics</a></li>
 
 </ul>
-
+<hr>
+  <a href="https://docs.google.com/document/d/1HpYUw6PQhz77wvXV1h8U-yv9aj-eHHPjQlVoZ6P8O2M/">Additional Links</a>: Changed for each Data Dunker Session.
 </body>
 
 </html>
