--- a/students/index.html
+++ b/students/index.html
@@ -71,41 +71,41 @@
 
   <div class="container filmstrip-container"><div class="responsive-picture film-strip">
       <picture><!--[if IE 9]><video style="display: none;"><![endif]-->
-        <source srcset="./images/footer/IMG_1719.jpg" media="(min-width: 64em)"><!--[if IE 9]></video><![endif]-->
-        <img alt="Placeholder Picture" width="480" height="443" src="./images/footer/IMG_1719.jpg">
+        <source srcset="../images/footer/IMG_1719.jpg" media="(min-width: 64em)"><!--[if IE 9]></video><![endif]-->
+        <img alt="Placeholder Picture" width="480" height="443" src="../images/footer/IMG_1719.jpg">
       </picture>
     </div><div class="responsive-picture film-strip">
       <picture><!--[if IE 9]><video style="display: none;"><![endif]-->
-        <source srcset="./images/footer/IMG_6317-scaled.jpg" media="(min-width: 64em)"><!--[if IE 9]></video><![endif]-->
-        <img alt="Placeholder Picture" width="400" height="369" src="./images/footer/IMG_6317-scaled.jpg">
+        <source srcset="../images/footer/IMG_6317-scaled.jpg" media="(min-width: 64em)"><!--[if IE 9]></video><![endif]-->
+        <img alt="Placeholder Picture" width="400" height="369" src="../images/footer/IMG_6317-scaled.jpg">
       </picture>
     </div><div class="responsive-picture film-strip">
       <picture><!--[if IE 9]><video style="display: none;"><![endif]-->
-        <source srcset="./images/footer/IMG_4610.jpg" media="(min-width: 64em)"><!--[if IE 9]></video><![endif]-->
-        <img alt="Placeholder Picture" width="400" height="369" src="./images/footer/IMG_4610.jpg">
+        <source srcset="../images/footer/IMG_4610.jpg" media="(min-width: 64em)"><!--[if IE 9]></video><![endif]-->
+        <img alt="Placeholder Picture" width="400" height="369" src="../images/footer/IMG_4610.jpg">
       </picture>
     </div><div class="responsive-picture film-strip">
       <picture><!--[if IE 9]><video style="display: none;"><![endif]-->
-        <source srcset="./images/footer/IMG_4614.jpg" media="(min-width: 64em)"><!--[if IE 9]></video><![endif]-->
-        <img alt="Placeholder Picture" width="400" height="369" src="./images/footer/IMG_4614.jpg">
+        <source srcset="../images/footer/IMG_4614.jpg" media="(min-width: 64em)"><!--[if IE 9]></video><![endif]-->
+        <img alt="Placeholder Picture" width="400" height="369" src="../images/footer/IMG_4614.jpg">
       </picture>
     </div><div class="responsive-picture film-strip">
       <picture><!--[if IE 9]><video style="display: none;"><![endif]-->
-        <source srcset="./images/footer/IMG_4664.jpg" media="(min-width: 64em)"><!--[if IE 9]></video><![endif]-->
-        <img alt="Placeholder Picture" width="400" height="369" src="./images/footer/IMG_4664.jpg">
+        <source srcset="../images/footer/IMG_4664.jpg" media="(min-width: 64em)"><!--[if IE 9]></video><![endif]-->
+        <img alt="Placeholder Picture" width="400" height="369" src="../images/footer/IMG_4664.jpg">
       </picture>
     </div><div class="responsive-picture film-strip">
       <picture><!--[if IE 9]><video style="display: none;"><![endif]-->
-        <source srcset="./images/footer/IMG_4836.jpg" media="(min-width: 64em)"><!--[if IE 9]></video><![endif]-->
-        <img alt="Placeholder Picture" width="400" height="369" src="./images/footer/IMG_4836.jpg">
+        <source srcset="../images/footer/IMG_4836.jpg" media="(min-width: 64em)"><!--[if IE 9]></video><![endif]-->
+        <img alt="Placeholder Picture" width="400" height="369" src="../images/footer/IMG_4836.jpg">
       </picture>
     </div>
  
   </div>
-  <script src="js/jquery.min.js"></script>
-  <script src="js/outofview.js"></script>
-  <script src="js/what-input.min.js"></script>
-  <script src="js/foundation.min.js"></script>
+  <script src="../js/jquery.min.js"></script>
+  <script src="../js/outofview.js"></script>
+  <script src="../js/what-input.min.js"></script>
+  <script src="../js/foundation.min.js"></script>
   <script>$(document).foundation();</script>
 <!-- SMOOTH SCROLL -->
 <script>
