--- a/students/index.html
+++ b/students/index.html
@@ -26,25 +26,27 @@
   <p class="paragraph"> 
 
 
-
-<a href="https://bit.ly/ddbbform5" target="_blank">5 Shot Form</a>
-<br>
+<ul>
+<li><a href="https://bit.ly/ddbbform5" target="_blank">5 Shot Form</a>
+</li><li>
 <a href="https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https://github.com/pbeens/Data-Dunkers&branch=main&subPath=Activities/lets_plot_hoop_data_5.ipynb&depth=1" target="_blank">Hoops Notebook</a>
-<br>
+</li><li>
 <a href="https://bit.ly/dd-mini-lab" target="_blank">Mini Basketball Labyrinth</a>
-<br>
+</li><li>
 <a href="https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https://github.com/pbeens/Data-Dunkers&branch=main&subPath=Demos&depth=1" target="_blank">Demos Folder</a>
-<br>
+</li>
+  </ul>
 <hr>
 <h2><a href="https://datadunkers.ca/jupyterlite/lab/index.html" target="_blank">Jupyterlite Links</a></h2>
-
+<ul>
+  <li>
 <a href="https://bit.ly/ddbbform5" target="_blank">5 Shot Form</a>
-<br>
+</li><li>
 <a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FActivities%2Flets_plot_hoop_data_5.ipynb" target="_blank">Hoops Notebook</a>
-<br>
+</li><li>
 <a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-labyrith%2Fmini-basketball%2Fmini-basketball.ipynb" target="_blank">Mini Basketball Labyrinth</a>
-<br>
-<h3>Demonstrations</h3>
+</li></ul>
+<h2>Demonstrations</h2>
 <ul>
   <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fdata-from-internal.ipynb" target="_blank">Data from Internal</a></li>
   <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fdata-from-csv.ipynb" target="_blank">Data from CSV</a></li>
