Update link to hoops notebook

--- a/students/index.html
+++ b/students/index.html
@@ -29,7 +29,7 @@
 <ul>
 <li><a href="https://bit.ly/ddbbform5" target="_blank">5 Shot Form</a>
 </li><li>
-<a href="https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https://github.com/pbeens/Data-Dunkers&branch=main&subPath=Activities/lets_plot_hoop_data_5.ipynb&depth=1" target="_blank">Hoops Notebook</a>
+<a href="https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https://github.com/Data-Dunkers/data-dunkers-modules&branch=main&urlpath=notebooks/data-dunkers-modules/data-dunkers/Activities/lets_plot_hoop_data_5.ipynb&depth=1" target="_blank">Hoops Notebook</a>
 </li><li>
 <a href="https://bit.ly/dd-mini-lab" target="_blank">Mini Basketball Labyrinth</a>
 </li><li>
