--- a/students/index.html
+++ b/students/index.html
@@ -33,7 +33,7 @@
 </li><li>
 <a href="https://bit.ly/dd-mini-lab" target="_blank">Mini Basketball Labyrinth</a>
 </li><li>
-<a href="https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https://github.com/pbeens/Data-Dunkers&branch=main&subPath=Demos&depth=1" target="_blank">Demos Folder</a>
+<a href="https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https://github.com/Data-Dunkers/data-dunkers-modules&branch=main&subPath=Demos&depth=1" target="_blank">Demos Folder</a>
 </li>
   </ul>
 <hr>
