--- a/students/index.html
+++ b/students/index.html
@@ -16,40 +16,76 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Chelsea+Market%7CRoboto">
 </head>
 
-<body class="no-js">
+<body class="no-js">  
+<img src="../images/data-dunkers-header-1.png" width="100%" alt="Data Dunkers" title="Data Dunkers" />
+<h2 class="hero-heading">Welcome to <span class="highlight-blue"> Data Dunkers Program</span></h2>  
   
-
-  <img src="../images/data-dunkers-header-1.png" width="100%" alt="Data Dunkers" title="Data Dunkers" />
-  <h2 class="hero-heading">Welcome to <span class="highlight-blue"> Data Dunkers Program Student Links</span></h2>  
-  <p class="paragraph"> 
-  <h2><a href="https://hub.callysto.ca" target="_blank">Callysto Hub Links</a></h2>
-
-<ul>
-<li><a href="https://bit.ly/ddbbform5" target="_blank">5 Shot Form</a>
-</li>
-<li>
-<a href="https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https://github.com/Data-Dunkers/data-dunkers-modules&branch=main&urlpath=notebooks/data-dunkers-modules/data-dunkers/Activities/lets_plot_hoop_data_5.ipynb&depth=1" target="_blank">Hoops Notebook</a>
-</li>
-<li>
-<a href="https://bit.ly/dd-mini-lab" target="_blank">Mini Basketball Labyrinth</a>
-</li>
-<li>
-<a href="https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https://github.com/Data-Dunkers/data-dunkers-modules&branch=main&subPath=Demos&depth=1" target="_blank">Demos Folder</a>
-</li>
-</ul>
-<hr>
-<h2><a href="https://datadunkers.ca/jupyterlite/lab/index.html" target="_blank">Jupyterlite Links</a></h2>
+<p class="paragraph"> 
+<h2><a href="https://colab.research.google.com/" target="_blank">Google Colab Links</a></h2>
 <ul>
   <li>
-<a href="https://bit.ly/ddbbform5" target="_blank">5 Shot Form</a>
-</li><li>
-<a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FActivities%2Flets_plot_hoop_data_5.ipynb" target="_blank">Hoops Notebook</a>
-</li><li>
-<a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-labyrith%2Fmini-basketball%2Fmini-basketball.ipynb" target="_blank">Mini Basketball Labyrinth</a>
-</li></ul>
+    <a href="https://bit.ly/ddbbform5" target="_blank">5 Shot Form</a>
+  </li>
+  <li>
+    <a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Activities/lets_plot_hoop_data_5.ipynb#scrollTo=iWShoEWXvVqw" target="_blank">Hoops Notebook</a>
+  </li>
+  <li>
+    <a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-labyrith%2Fmini-basketball%2Fmini-basketball.ipynb" target="_blank">Mini Basketball Labyrinth</a>
+  </li>
+</ul>
+<h3>Demonstrations</h3>
+  <ul>
+  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/data-from-internal.ipynb" target="_blank">Data from Internal</a></li>
+  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/data-from-csv.ipynb" target="_blank">Data from CSV</a></li>
+  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/data-from-webpage.ipynb" target="_blank">Data from Webpage</a></li>
+  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/data-from-google-sheet.ipynb" target="_blank">Data from Google Sheet</a></li>
+  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/data-from-excel.ipynb" target="_blank">Data from Excel</a></li>
+<hr>
+  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/bar-graphs.ipynb" target="_blank">Bar Charts</a></li>
+  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/scatter-plots.ipynb" target="_blank">Scatter Plots</a></li>
+  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/pie-charts.ipynb" target="_blank">Pie Charts</a></li>
+  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/histograms.ipynb" target="_blank">Histograms</a></li>
+<hr>
+  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/columns.ipynb" target="_blank">Columns</a></li>
+  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/new-columns.ipynb" target="_blank">Making New Columns</a></li>
+  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/filtering-data.ipynb" target="_blank">Filtering Data</a></li>
+  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/sorting-data.ipynb" target="_blank">Sorting Data</a></li>
+  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/statistics.ipynb" target="_blank">Statistics</a></li>
+</ul>
+
+<hr>
+
+<h2><a href="https://hub.callysto.ca" target="_blank">Callysto Hub Links</a></h2>
+  <ul>
+    <li>
+      <a href="https://bit.ly/ddbbform5" target="_blank">5 Shot Form</a>
+    </li>
+    <li>
+      <a href="https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https://github.com/Data-Dunkers/data-dunkers-modules&branch=main&urlpath=notebooks/data-dunkers-modules/data-dunkers/Activities/lets_plot_hoop_data_5.ipynb&depth=1" target="_blank">Hoops Notebook</a>
+    </li>
+    <li>
+      <a href="https://bit.ly/dd-mini-lab" target="_blank">Mini Basketball Labyrinth</a>
+    </li>
+    <li>
+      <a href="https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https://github.com/Data-Dunkers/data-dunkers-modules&branch=main&subPath=Demos&depth=1" target="_blank">Demos Folder</a>
+    </li>
+  </ul>
+<hr>
+<h2><a href="https://datadunkers.ca/jupyterlite/lab/index.html" target="_blank">Jupyterlite Links</a></h2>
+  <ul>
+    <li>
+      <a href="https://bit.ly/ddbbform5" target="_blank">5 Shot Form</a>
+    </li>
+    <li>
+      <a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FActivities%2Flets_plot_hoop_data_5.ipynb" target="_blank">Hoops Notebook</a>
+    </li>
+    <li>
+      <a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-labyrith%2Fmini-basketball%2Fmini-basketball.ipynb" target="_blank">Mini Basketball Labyrinth</a>
+    </li>
+  </ul>
   <hr>
-<h2>Demonstrations</h2>
-<ul>
+  <h3>Demonstrations</h3>
+  <ul>
   <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fdata-from-internal.ipynb" target="_blank">Data from Internal</a></li>
   <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fdata-from-csv.ipynb" target="_blank">Data from CSV</a></li>
   <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fdata-from-webpage.ipynb" target="_blank">Data from Webpage</a></li>
@@ -65,7 +101,6 @@
   <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fnew-columns.ipynb" target="_blank">Making New Columns</a></li>
   <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Ffiltering-data.ipynb" target="_blank">Filtering Data</a></li>
   <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fsorting-data.ipynb" target="_blank">Sorting Data</a></li>
-<hr>
   <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FDemos%2Fstatistics.ipynb" target="_blank">Statistics</a></li>
 
 </ul>
@@ -73,7 +108,7 @@
   <a href="https://docs.google.com/document/d/1HpYUw6PQhz77wvXV1h8U-yv9aj-eHHPjQlVoZ6P8O2M/">Additional Links</a>: Changed for each Data Dunker Session.
     
     
-    </p>
+</p>
 
 </body>
 
