--- a/students/index.html
+++ b/students/index.html
@@ -23,15 +23,9 @@
 <p class="paragraph"> 
 <h2><a href="https://colab.research.google.com/" target="_blank">Google Colab Links</a></h2>
 <ul>
-  <li>
-    <a href="https://bit.ly/ddbbform5" target="_blank">5 Shot Form</a>
-  </li>
-  <li>
-    <a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Activities/lets_plot_hoop_data_5.ipynb#scrollTo=iWShoEWXvVqw" target="_blank">Hoops Notebook</a>
-  </li>
-  <li>
-    <a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-labyrith%2Fmini-basketball%2Fmini-basketball.ipynb" target="_blank">Mini Basketball Labyrinth</a>
-  </li>
+  <li><a href="https://bit.ly/ddbbform5" target="_blank">5 Shot Form</a></li>
+  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Activities/lets_plot_hoop_data_5.ipynb#scrollTo=iWShoEWXvVqw" target="_blank">Hoops Notebook</a></li>
+  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-labyrith%2Fmini-basketball%2Fmini-basketball.ipynb" target="_blank">Mini Basketball Labyrinth</a></li>
 </ul>
 <h3>Demonstrations</h3>
   <ul>
@@ -52,7 +46,8 @@
   <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/sorting-data.ipynb" target="_blank">Sorting Data</a></li>
   <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/statistics.ipynb" target="_blank">Statistics</a></li>
 </ul>
-
+<a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-labyrith%2Fbasketball%2Fbasketball.ipynb" target="_blank">Second Basketball Labyrinth</a><br>
+<a href="https://colab.research.google.com/github/PS43Foundation/data-dunkers/blob/main/notebooks/hackathon/pascal-siakam-stats-intro.ipynb" target="_blank">Siakam Stats Challenge</a><br>
 <hr>
 
 <h2><a href="https://hub.callysto.ca" target="_blank">Callysto Hub Links</a></h2>
