--- a/students/index.html
+++ b/students/index.html
@@ -21,7 +21,7 @@
 <h2 class="hero-heading">Welcome to <span class="highlight-blue"> Data Dunkers Program</span></h2>  
   
 <p class="paragraph"> 
-<h2><a href="https://colab.research.google.com/" target="_blank">Google Colab Links</a></h2>
+<h2 style="font-family: 'Chelsea Market', cursive;"><a href="https://colab.research.google.com/" target="_blank">Google Colab Links</a></h2>
 <ul>
   <li><a href="https://bit.ly/ddbbform5" target="_blank">5 Shot Form</a></li>
   <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Activities/lets_plot_hoop_data_5.ipynb#scrollTo=iWShoEWXvVqw" target="_blank">Hoops Notebook</a></li>
@@ -50,7 +50,7 @@
 <a href="https://colab.research.google.com/github/PS43Foundation/data-dunkers/blob/main/notebooks/hackathon/pascal-siakam-stats-intro.ipynb" target="_blank">Siakam Stats Challenge</a><br>
 <hr>
 
-<h2><a href="https://hub.callysto.ca" target="_blank">Callysto Hub Links</a></h2>
+<h2 style="font-family: 'Chelsea Market', cursive;"><a href="https://hub.callysto.ca" target="_blank">Callysto Hub Links</a></h2>
   <ul>
     <li>
       <a href="https://bit.ly/ddbbform5" target="_blank">5 Shot Form</a>
@@ -66,7 +66,7 @@
     </li>
   </ul>
 <hr>
-<h2><a href="https://datadunkers.ca/jupyterlite/lab/index.html" target="_blank">Jupyterlite Links</a></h2>
+<h2 style="font-family: 'Chelsea Market', cursive;"><a href="https://datadunkers.ca/jupyterlite/lab/index.html" target="_blank">Jupyterlite Links</a></h2>
   <ul>
     <li>
       <a href="https://bit.ly/ddbbform5" target="_blank">5 Shot Form</a>
@@ -101,10 +101,8 @@
 </ul>
 <hr>
   <a href="https://docs.google.com/document/d/1HpYUw6PQhz77wvXV1h8U-yv9aj-eHHPjQlVoZ6P8O2M/">Additional Links</a>: Changed for each Data Dunker Session.
-    
-    
+
 </p>
 
 </body>
-
 </html>
