--- a/individual.html
+++ b/individual.html
@@ -107,8 +107,8 @@
 <body class="no-js">
     <div class="container menu-container">
       <a class="link-text nav-link smooth-scroll" href="index.html">Home</a>
-      <a class="link-text nav-link smooth-scroll" href="overview.html">About</a>
-      <a class="link-text nav-link smooth-scroll" href="coaching.html">Video Coaching</a>
+      <a class="link-text nav-link smooth-scroll" href="about.html">About</a>
+      <a class="link-text nav-link smooth-scroll" href="begin.html">Get Started</a>
     </div>
   </div>
   <img src="images/data-dunkers-header-1.png" width="100%" alt="Data Dunkers" title="Data Dunkers" />
@@ -153,7 +153,11 @@ The videos below will guide you through understanding the Data Dunkers Program i
         <img src="images/DataDunkersIntro-Still.jpg" class="thumbnail" id="thumbnail4" alt="Data Dunkers Video Thumbnail" onclick="showVideo('video4', 'thumbnail4')">
         <iframe id="video4" allowfullscreen scrolling='no' frameborder='0' src='https://www.wevideo.com/embed/#3578549162'></iframe>
         <h2 class="name">GitHub Resources Overview</h2>
-        <p class="bio">A tour of the essential resources needed to run the program, including Jupyter Notebooks, slide decks, and module descriptions. Learn how to navigate <a href='https://github.com/Data-Dunkers/'>Our Github Repository</a>.</p>
+        <p class="bio">A tour of the essential resources needed to run the program, including Jupyter Notebooks, slide decks, and module descriptions.</p>
+       <div class="resource-links">
+          <!-- Add resource links here -->
+          <p><a href="https://github.com/Data-Dunkers/">Navigate our Github Repository</a></p>
+        </div>
       </div>
       <div class="video-item">
         <img src="images/DataDunkersIntro-Still.jpg" class="thumbnail" id="thumbnail5" alt="Data Dunkers Video Thumbnail" onclick="showVideo('video5', 'thumbnail5')">
@@ -166,6 +170,10 @@ The videos below will guide you through understanding the Data Dunkers Program i
         <iframe id="video6" allowfullscreen scrolling='no' frameborder='0' src='https://www.wevideo.com/embed/#3578537218'></iframe>
         <h2 class="name">Instructional Approach</h2>
         <p class="bio">A look into the instructional flow of the program and key decision points for teachers, providing guidance on how to facilitate student learning effectively.</p>
+              <div class="resource-links">
+          <!-- Add resource links here -->
+          <p><a href="https://docs.google.com/document/d/14CbzaP2m4mBz6Eufiry-4aRfjcRVt0ne2OKelZent9o">View List of Instructional Modules to run the Fundamentals program.</a></p>
+        </div>
       </div>
     </div>
   </div>
@@ -181,7 +189,7 @@ The videos below will guide you through understanding the Data Dunkers Program i
         <p class="bio">An introduction to Jupyter Notebooks, detailing how to use them within the program and reviewing the Mini-Hoops activity as an example.</p>
         <div class="resource-links">
           <!-- Add resource links here -->
-          <p><a href="#">Link to Jupyter Notebooks Resource</a></p>
+          <p><a href="https://github.com/Data-Dunkers/lessons/blob/main/jupyter-notebook-demo.ipynb">Link to Jupyter Notebooks Resource</a></p>
         </div>
       </div>
       <div class="video-item">
@@ -191,7 +199,7 @@ The videos below will guide you through understanding the Data Dunkers Program i
         <p class="bio">A detailed explanation of the Mini-Hoops activity, including a review of the corresponding Jupyter Notebook to support hands-on learning.</p>
         <div class="resource-links">
           <!-- Add resource links here -->
-          <p><a href="#">Link to Mini-Hoops Resource</a></p>
+          <p><a href="https://github.com/Data-Dunkers/lessons/blob/main/hoop-data.ipynb">Link to Mini-Hoops Notebook</a></p>
         </div>
       </div>
       <div class="video-item">
@@ -201,7 +209,7 @@ The videos below will guide you through understanding the Data Dunkers Program i
         <p class="bio">An overview of the Labyrinth activity, focusing on how to implement it in the classroom and use the Labyrinth Notebook for guided practice.</p>
         <div class="resource-links">
           <!-- Add resource links here -->
-          <p><a href="#">Link to Labyrinth Resource</a></p>
+          <p><a href="https://github.com/Data-Dunkers/lessons/blob/main/labyrinths/mini-basketball/mini-basketball.ipynb">Link to Labyrinth Notebook</a></p>
         </div>
       </div>
     </div>
