--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
   <script>document.createElement( "picture" );</script>
   <script class="picturefill" async="async" src="js/picturefill.min.js"></script>
   <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Chelsea+Market%7CRoboto">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Chelsea+Market%7CRoboto">   
+
 </head>
 
 <body class="no-js">
     <div class="container menu-container">
       <a class="link-text nav-link smooth-scroll" href="index.html">Home</a>
-      <a class="link-text nav-link smooth-scroll" href="About.html">About</a>
-      <a class="link-text nav-link smooth-scroll" href="modules.html">Learning Modules</a>
+      <a class="link-text nav-link smooth-scroll" href="about.html">About</a>
+      <a class="link-text nav-link smooth-scroll" href="begin.html">Get Started</a>
     </div>
   </div>
   <img src="images/data-dunkers-header-1.png" width="100%" alt="Data Dunkers" title="Data Dunkers" />
@@ -32,8 +33,8 @@ The program consists of learning activities designed to explore how to find mean
     <p class="paragraph mission-statement">The program, a partnership between PS43 Foundation and Dell Technologies, and involving collaborations with Callysto and Digital Moments, aims to make Data Science real and meaningful for students. 
   <br>
  <b>All Schools can implement the Program now with available support:</b>   <br>
- Learning Modules <br>
-Support Materials needed to implement the Learning Modules 
+ Coaching Videos <br>
+Program Materials needed to implement the Learning Modules 
  <br>   <br>
   
  <b>Additional Support</b> for High Priority Schools Available: <br>
@@ -45,22 +46,22 @@ Includes Data Dunkers swag, a celebration at the end of the program, and more!
   
   
   <div class="container cats-for-adoption-wrapper" id="adoption">
-   <div class="container info-container"><a href="About.html" class="responsive-picture picture-link-1">
+   <div class="container info-container"><a href="about.html" class="responsive-picture picture-link-1">
         <picture>
           <img alt="PS" width="600" height="400" src="./images/PSwithStudents.jpg">
         </picture>
       </a>
-      <h2 class="name"><a href="About.html"><span class="white">Learn more about</span> the program</a></h2>
+      <h2 class="name"><a href="about.html"><span class="white">Learn more about</span> the program</a></h2>
       <p class="paragraph bio"> The program is built around an inquiry approach to learning. It emphasizes student voice and choice, incorporates physical activities, and fosters critical global competencies through design thinking and personal projects.
       </p>
     </div>
-    <div class="container info-container"><a href="modules.html" class="responsive-picture picture-link-1">
+    <div class="container info-container"><a href="begin.html" class="responsive-picture picture-link-1">
         <picture>
           <img alt="Modules" width="600" height="400" src="./images/StudentsWorking.jpg">
         </picture>
       </a>
-      <h2 class="name"><a href="modules.html"><span class="white">Learn more about</span> the Learning Modules</a></h2>
-      <p class="paragraph bio">The Learning Modules provide the framework for providing the program. They are designed for flexible implementation.</p>
+      <h2 class="name"><a href="begin.html"><span class="white">Get Started</span> with one of our options.</a></h2>
+      <p class="paragraph bio">The Data Dunkers program is designed for flexible implementation. We have a number of formats that you can explore.</p>
     </div>
    <!--         <div class="container info-container"><a href="#" class="responsive-picture picture-link-1">
         <picture>
@@ -75,7 +76,7 @@ Includes Data Dunkers swag, a celebration at the end of the program, and more!
           <img alt="Contact" width="600" height="400" src="./images/footer/IMG_6321-scaled.jpg">
         </picture>
       </a>
-      <h2 class="name"><a href="mailto:datadunkers@dell.com"><span class="white">Contact us</span> about the additional support</a></h2>
+      <h2 class="name"><a href="mailto:datadunkers@dell.com"><span class="white">Contat us</span> about additional support</a></h2>
       <p class="paragraph bio">If you would like to know more about the additional support for high priority schools, reach out! <a href="mailto:datadunkers@dell.com">datadunkers@dell.com</a></p>
     </div> 
   </div>     
@@ -83,7 +84,7 @@ Includes Data Dunkers swag, a celebration at the end of the program, and more!
   <div class="container contact-container" id="contact">
     <div class="container location">
       <h3 class="footer-section-header">Partners</h3>
-      <p class="paragraph footer-paragraph">PS43 Foundation<br>Dell Technologies<br>Callysto<br>Digital Moment</p>
+      <p class="paragraph footer-paragraph">PS43 Foundation<br>Dell Technologies<br>Callysto<br>Digital Moments</p>
     </div>
     <div class="container contac-us-footer">
       <h3 class="footer-section-header">Contact Us</h3>
