--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ The program consists of learning activities designed to explore how to find mean
   <br>
  <b>All Schools can implement the Program now with available support:</b>   <br>
  Coaching Videos <br>
-Program Materials needed to implement the Learning Modules 
+ Materials needed to implement the Data Dunkers Program
  <br>   <br>
   
  <b>Additional Support</b> for High Priority Schools Available: <br>
