Add partner links

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 The program consists of learning activities designed to explore how to find meaning in data, primarily using open data from the NBA and WNBA. Students engage in the data analysis process by identifying a focus question, gathering, cleansing, and examining data, followed by clearly presenting their findings. This process serves as a launchpad for global competencies, such as critical thinking and problem solving, and for discovering career pathways within the realm of data science.</p>
    <div class="container section-break">
     <h2 class="hero-heading">The Program </h2>  
-    <p class="paragraph mission-statement">The program, a partnership between PS43 Foundation and Dell Technologies, and involving collaborations with Callysto and Digital Moments, aims to make Data Science real and meaningful for students. 
+    <p class="paragraph mission-statement">The program, a partnership between PS43 Foundation and Dell Technologies, and involving collaborations with Callysto and Digital Moment, aims to make Data Science real and meaningful for students. 
   <br>
  <b>All Schools can implement the Program now with available support:</b>   <br>
  Coaching Videos <br>
@@ -84,7 +84,7 @@ Includes Data Dunkers swag, a celebration at the end of the program, and more!
   <div class="container contact-container" id="contact">
     <div class="container location">
       <h3 class="footer-section-header">Partners</h3>
-      <p class="paragraph footer-paragraph">PS43 Foundation<br>Dell Technologies<br>Callysto<br>Digital Moments</p>
+      <p class="paragraph footer-paragraph"><a href="https://www.ps43foundation.com/">PS43 Foundation</a><br><a href="https://www.dell.com/en-ca">Dell Technologies</a><br><a href="https://callysto.ca/">Callysto</a><br><a href="https://www.digitalmoment.org/">Digital Moment</a></p>
     </div>
     <div class="container contac-us-footer">
       <h3 class="footer-section-header">Contact Us</h3>
