--- a/students/index.html
+++ b/students/index.html
@@ -21,12 +21,22 @@
 <h2 class="hero-heading">Welcome to <span class="highlight-blue"> Data Dunkers Program</span></h2>  
   
 <p class="paragraph"> 
-<h2 style="font-family: 'Chelsea Market', cursive;"><a href="https://colab.research.google.com/" target="_blank">Google Colab Links</a></h2>
-<ul>
-  <li><a href="https://bit.ly/ddbbform5" target="_blank">5 Shot Form</a></li>
-  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Activities/lets_plot_hoop_data_5.ipynb#scrollTo=iWShoEWXvVqw" target="_blank">Hoops Notebook</a></li>
-  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-labyrith%2Fmini-basketball%2Fmini-basketball.ipynb" target="_blank">Mini Basketball Labyrinth</a></li>
-</ul>
+<h2 style="font-family: 'Chelsea Market', cursive;"><a href="https://hub.callysto.ca" target="_blank">Callysto Hub Links</a></h2>
+  <ul>
+    <li>
+      <a href="https://bit.ly/ddbbform5" target="_blank">5 Shot Form</a>
+    </li>
+    <li>
+      <a href="https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fdata-dunkers%2Flessons&branch=main&subPath=hoop-data.ipynb&depth=1" target="_blank">Hoops Notebook</a>
+    </li>
+    <li>
+      <a href="https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fdata-dunkers%2Flessons&branch=main&subPath=labyrinths/mini-basketball/mini-basketball.ipynb&depth=1" target="_blank">Mini Basketball Labyrinth</a>
+    </li>
+    <li>
+      <a href="https://github.com/Data-Dunkers/lessons/blob/main/README.md" target="_blank">Additional Lessons Links</a>
+    </li>
+  </ul>
+  <hr>
 <h3>Demonstrations</h3>
   <ul>
   <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Demos/data-from-internal.ipynb" target="_blank">Data from Internal</a></li>
@@ -49,22 +59,14 @@
 <a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-labyrith%2Fbasketball%2Fbasketball.ipynb" target="_blank">Second Basketball Labyrinth</a><br>
 <a href="https://colab.research.google.com/github/PS43Foundation/data-dunkers/blob/main/notebooks/hackathon/pascal-siakam-stats-intro.ipynb" target="_blank">Siakam Stats Challenge</a><br>
 <hr>
+<h2 style="font-family: 'Chelsea Market', cursive;"><a href="https://colab.research.google.com/" target="_blank">Google Colab Links</a></h2>
+<ul>
+  <li><a href="https://bit.ly/ddbbform5" target="_blank">5 Shot Form</a></li>
+  <li><a href="https://colab.research.google.com/github/Data-Dunkers/data-dunkers-modules/blob/main/data-dunkers/Activities/lets_plot_hoop_data_5.ipynb#scrollTo=iWShoEWXvVqw" target="_blank">Hoops Notebook</a></li>
+  <li><a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-labyrith%2Fmini-basketball%2Fmini-basketball.ipynb" target="_blank">Mini Basketball Labyrinth</a></li>
+</ul>
+  
 
-<h2 style="font-family: 'Chelsea Market', cursive;"><a href="https://hub.callysto.ca" target="_blank">Callysto Hub Links</a></h2>
-  <ul>
-    <li>
-      <a href="https://bit.ly/ddbbform5" target="_blank">5 Shot Form</a>
-    </li>
-    <li>
-      <a href="https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https://github.com/Data-Dunkers/data-dunkers-modules&branch=main&urlpath=notebooks/data-dunkers-modules/data-dunkers/Activities/lets_plot_hoop_data_5.ipynb&depth=1" target="_blank">Hoops Notebook</a>
-    </li>
-    <li>
-      <a href="https://bit.ly/dd-mini-lab" target="_blank">Mini Basketball Labyrinth</a>
-    </li>
-    <li>
-      <a href="https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https://github.com/Data-Dunkers/data-dunkers-modules&branch=main&subPath=Demos&depth=1" target="_blank">Demos Folder</a>
-    </li>
-  </ul>
 <hr>
 <h2 style="font-family: 'Chelsea Market', cursive;"><a href="https://datadunkers.ca/jupyterlite/lab/index.html" target="_blank">Jupyterlite Links</a></h2>
   <ul>
