--- a/About.html
+++ b/About.html
@@ -185,7 +185,7 @@
   <div class="container contact-container" id="contact">
     <div class="container location">
       <h3 class="footer-section-header">Partners</h3>
-      <p class="paragraph footer-paragraph">PS43 Foundation<br>Dell Technologies<br>Callysto<br>Digital Moments</p>
+      <p class="paragraph footer-paragraph"><a href="https://www.ps43foundation.com/">PS43 Foundation</a><br><a href="https://www.dell.com/en-ca">Dell Technologies</a><br><a href="https://callysto.ca/">Callysto</a><br><a href="https://www.digitalmoment.org/">Digital Moment</a></p>
     </div>
     <div class="container contac-us-footer">
       <h3 class="footer-section-header">Contact Us</h3>
