--- a/mfnss/index.html
+++ b/mfnss/index.html
@@ -27,7 +27,7 @@
       <a href="https://bit.ly/ddbbform5" target="_blank">5 Shot Form</a>
     </li>
     <li>
-      <a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FActivities%2Flets_plot_hoop_data_5.ipynb" target="_blank">Hoops Notebook</a>
+      <a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FActivities%2Fletsplothoopdatamfnss.ipynb" target="_blank">Hoops Notebook</a>
     </li>
     <li>
       <a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-labyrith%2Fmini-basketball%2Fmini-basketball.ipynb" target="_blank">Mini Basketball Labyrinth</a>
