--- a/mfnss/index.html
+++ b/mfnss/index.html
@@ -35,7 +35,12 @@
     <li>
       <a href="https://docs.google.com/document/d/1pl-maKKyVUh8uJR2vV63qvYw7m8B9s-I458whwh8m3g/edit?usp=sharing" target="_blank">Additional Activities Links</a>
     </li>
-    
+        <li>
+      <a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FActivities%2FHoops_notebook__teams.ipynb" target="_blank">Team version of Hoops Notebook</a>
+    </li>
+        <li>
+      <a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FActivities%2FHoops_notebook__DD.ipynb" target="_blank">Hoops Notebook with New Data Set</a>
+    </li>
   </ul>
    
 <hr>
