--- a/mfnss/index.html
+++ b/mfnss/index.html
@@ -24,10 +24,10 @@
 <h2 style="font-family: 'Chelsea Market', cursive;"><a href="https://hub.callysto.ca" target="_blank">Our Program Links</a></h2>
   <ul>
     <li>
-      <a href="https://bit.ly/ddbbform5" target="_blank">5 Shot Form</a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxph_JWN6dwJBRKikR-l_YVHtS91XDMDPJDLWkB5zA07pPVg/viewform" target="_blank">5 Shot Form</a>
     </li>
     <li>
-      <a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FActivities%2Fletsplothoopdatamfnss.ipynb" target="_blank">Hoops Notebook</a>
+      <a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FActivities%2Fhoops_notebook_dd.ipynb" target="_blank">Hoops Notebook</a>
     </li>
     <li>
       <a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-labyrith%2Fmini-basketball%2Fmini-basketball.ipynb" target="_blank">Mini Basketball Labyrinth</a>
@@ -36,11 +36,9 @@
       <a href="https://docs.google.com/document/d/1pl-maKKyVUh8uJR2vV63qvYw7m8B9s-I458whwh8m3g/edit?usp=sharing" target="_blank">Additional Activities Links</a>
     </li>
         <li>
-      <a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FActivities%2FHoops_notebook__teams.ipynb" target="_blank">Team version of Hoops Notebook</a>
+      <a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FActivities%2Fhoops_notebook_teams.ipynb" target="_blank">Team version of Hoops Notebook</a>
     </li>
-        <li>
-      <a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FActivities%2FHoops_notebook__DD.ipynb" target="_blank">Hoops Notebook with New Data Set</a>
-    </li>
+       
   </ul>
    
 <hr>
