--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Includes Data Dunkers swag, a celebration at the end of the program, and more!
           <img alt="Contact" width="600" height="400" src="./images/footer/IMG_6321-scaled.jpg">
         </picture>
       </a>
-      <h2 class="name"><a href="mailto:datadunkers@dell.com"><span class="white">Contat us</span> about additional support</a></h2>
+      <h2 class="name"><a href="mailto:datadunkers@dell.com"><span class="white">Contact us</span> about additional support</a></h2>
       <p class="paragraph bio">If you would like to know more about the additional support for high priority schools, reach out! <a href="mailto:datadunkers@dell.com">datadunkers@dell.com</a></p>
     </div> 
   </div>     
