--- a/individual.html
+++ b/individual.html
@@ -79,9 +79,14 @@
     }
 
     .bio {
-      text-align: center;
-      font-size: 14px;
-    }
+    text-align: center;
+    font-size: 14px;
+    background-color: #f0f0f0; 
+    padding: 15px; 
+    border: 1px solid #ccc; 
+    border-radius: 5px; 
+    margin: 10px 0; 
+  }
 
     .resource-links {
       text-align: center;
