--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Includes Data Dunkers swag, a celebration at the end of the program, and more!
           <img alt="Modules" width="600" height="400" src="./images/StudentsWorking.jpg">
         </picture>
       </a>
-      <h2 class="name"><a href="begin.html"><span class="white">Get Started</span> with one of our options.</a></h2>
+      <h2 class="name"><a href="begin.html"><span class="white">Get Started</span> with one of our options</a></h2>
       <p class="paragraph bio">The Data Dunkers program is designed for flexible implementation. We have a number of formats that you can explore.</p>
     </div>
    <!--         <div class="container info-container"><a href="#" class="responsive-picture picture-link-1">
