--- a/mfnss/index.html
+++ b/mfnss/index.html
@@ -38,7 +38,12 @@
         <li>
       <a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FActivities%2Fhoops_notebook_teams.ipynb" target="_blank">Team version of Hoops Notebook</a>
     </li>
-       
+ <li>
+      <a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FActivities%2Fdream_team_lite.ipynb" target="_blank">Getting your Dream Team Players</a>
+    </li>
+    <li>
+      <a href=" https://docs.google.com/forms/d/e/1FAIpQLScXWvKJ6y9DH7K_g_8WsseuH9o3ag-kN1zn1DMVLrVjyezOJg/viewform?usp=header" target="_blank">Our Dream Team Form</a>
+    </li>
   </ul>
    
 <hr>
