--- a/mfnss/index.html
+++ b/mfnss/index.html
@@ -29,6 +29,9 @@
     <li>
       <a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FActivities%2Fhoops_notebook_dd5.ipynb" target="_blank">Hoops Notebook</a>
     </li>
+      <li>
+      <a href="https://docs.google.com/document/d/1pl-maKKyVUh8uJR2vV63qvYw7m8B9s-I458whwh8m3g/edit?usp=sharing" target="_blank">Additional Activities Links</a>
+    </li>
   </ul>
    
 <hr>
