--- a/mfnss/index.html
+++ b/mfnss/index.html
@@ -27,11 +27,15 @@
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxph_JWN6dwJBRKikR-l_YVHtS91XDMDPJDLWkB5zA07pPVg/viewform" target="_blank">5 Shot Form</a>
     </li>
     <li>
-      <a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FActivities%2Fhoops_notebook_dd5.ipynb" target="_blank">Hoops Notebook</a>
+      <a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-dunkers%2FActivities%2Fhoops_notebook_dd6.ipynb" target="_blank">Hoops Notebook</a>
     </li>
+      <li>
+      <a href="https://datadunkers.ca/jupyterlite/notebooks/index.html?path=data-labyrith%2Fmini-basketball%2Fmini-basketball.ipynb" target="_blank">Mini-Basketball Labyrinth</a>
+    </li>    
       <li>
       <a href="https://docs.google.com/document/d/1pl-maKKyVUh8uJR2vV63qvYw7m8B9s-I458whwh8m3g/edit?usp=sharing" target="_blank">Additional Activities Links</a>
     </li>
+  
   </ul>
    
 <hr>
